--- a/Vitkund/Views/Home/Contact.cshtml
+++ b/Vitkund/Views/Home/Contact.cshtml
@@ -1,111 +1,147 @@
 ﻿
-    <main class="rbt-main-wrapper">
+<main class="rbt-main-wrapper">
 
-        <div class="rbt-conatct-area bg-gradient-11 rbt-section-gap">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="section-title text-center mb--60">
-                            <span class="subtitle bg-secondary-opacity">Contact Us</span>
-                            <h2 class="title">Vit Kund Business Guides <br />(We are available on Monday to Saturday 10am to 5pm) </h2>
+    <div class="rbt-conatct-area bg-gradient-11 rbt-section-gap">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="section-title text-center mb--60">
+                        <span class="subtitle bg-secondary-opacity">Contact Us</span>
+                        <h2 class="title">Vit Kund Business Guides <br />(We are available on Monday to Saturday 10am to 5pm) </h2>
+                    </div>
+                </div>
+            </div>
+            <div class="row g-5">
+                <div class="col-lg-4 col-md-6 col-sm-6 col-12 sal-animate" data-sal="slide-up" data-sal-delay="150" data-sal-duration="800">
+                    <div class="rbt-address">
+                        <div class="icon">
+                            <i class="feather-headphones"></i>
+                        </div>
+                        <div class="inner">
+                            <h4 class="title">Contact Phone Number</h4>
+                            <p><a href="tel:+918607609898">+91 8607609898</a></p>
                         </div>
                     </div>
                 </div>
-                <div class="row g-5">
-                    <div class="col-lg-4 col-md-6 col-sm-6 col-12 sal-animate" data-sal="slide-up" data-sal-delay="150" data-sal-duration="800">
-                        <div class="rbt-address">
-                            <div class="icon">
-                                <i class="feather-headphones"></i>
-                            </div>
-                            <div class="inner">
-                                <h4 class="title">Contact Phone Number</h4>
-                                <p><a href="tel:+918607609898">+91 8607609898</a></p>
-                            </div>
+                <div class="col-lg-4 col-md-6 col-sm-6 col-12 sal-animate" data-sal="slide-up" data-sal-delay="200" data-sal-duration="800">
+                    <div class="rbt-address">
+                        <div class="icon">
+                            <i class="feather-mail"></i>
+                        </div>
+                        <div class="inner">
+                            <h4 class="title">Our Email Address</h4>
+                            <p><a href="mailto:info@vitkund.com">info@vitkund.com</a></p>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-6 col-12 sal-animate" data-sal="slide-up" data-sal-delay="200" data-sal-duration="800">
-                        <div class="rbt-address">
-                            <div class="icon">
-                                <i class="feather-mail"></i>
-                            </div>
-                            <div class="inner">
-                                <h4 class="title">Our Email Address</h4>
-                                <p><a href="mailto:info@vitkund.com">info@vitkund.com</a></p>
-                            </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-6 col-12 sal-animate" data-sal="slide-up" data-sal-delay="250" data-sal-duration="800">
+                    <div class="rbt-address">
+                        <div class="icon">
+                            <i class="feather-map-pin"></i>
                         </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 col-sm-6 col-12 sal-animate" data-sal="slide-up" data-sal-delay="250" data-sal-duration="800">
-                        <div class="rbt-address">
-                            <div class="icon">
-                                <i class="feather-map-pin"></i>
-                            </div>
-                            <div class="inner">
-                                <h4 class="title">Our Location</h4>
-                                <p>Rohtak, Haryana (124001)</p>
-                            </div>
+                        <div class="inner">
+                            <h4 class="title">Our Location</h4>
+                            <p>Rohtak, Haryana (124001)</p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
 
-        <div class="rbt-contact-address">
-            <div class="container">
-                <div class="row g-5">
-                    <div class="col-lg-6">
-                        <div class="thumbnail">
-                            <img class="w-100 radius-6" src="~/Content/assets/images/benefits-img2.png" alt="Contact Images">
-                        </div>
+    <div class="rbt-contact-address">
+        <div class="container">
+            <div class="row g-5">
+                <div class="col-lg-6">
+                    <div class="thumbnail">
+                        <img class="w-100 radius-6" src="~/Content/assets/images/benefits-img2.png" alt="Contact Images">
                     </div>
+                </div>
 
-                    <div class="col-lg-6">
-                        <div class="rbt-contact-form contact-form-style-1 max-width-auto">
-                            <div class="section-title text-start">
-                                <span class="subtitle bg-primary-opacity">VITKUND</span>
-                            </div>
-                            <h3 class="title">Contact With Us</h3>
-                            <form id="contact-form" method="POST" action="mail.php" class="rainbow-dynamic-form max-width-auto">
-                                <div class="form-group">
-                                    <input name="contact-name" id="contact-name" type="text">
-                                    <label>Name</label>
-                                    <span class="focus-border"></span>
-                                </div>
-                                <div class="form-group">
-                                    <input name="contact-phone" type="email">
-                                    <label>Email</label>
-                                    <span class="focus-border"></span>
-                                </div>
-                                <div class="form-group">
-                                    <input type="text" id="subject" name="subject">
-                                    <label>Your Subject</label>
-                                    <span class="focus-border"></span>
-                                </div>
-                                <div class="form-group">
-                                    <textarea name="contact-message" id="contact-message"></textarea>
-                                    <label>Message</label>
-                                    <span class="focus-border"></span>
-                                </div>
-                                <div class="form-submit-group">
-                                    <button name="submit" type="submit" id="submit" class="rbt-btn btn-md btn-gradient hover-icon-reverse w-100">
-                                        <span class="icon-reverse-wrapper">
-                                            <span class="btn-text">GET IT NOW</span>
-                                            <span class="btn-icon"><i class="feather-arrow-right"></i></span>
-                                            <span class="btn-icon"><i class="feather-arrow-right"></i></span>
-                                        </span>
-                                    </button>
-                                </div>
-                            </form>
+                <div class="col-lg-6">
+                    <div class="rbt-contact-form contact-form-style-1 max-width-auto">
+                        <div class="section-title text-start">
+                            <span class="subtitle bg-primary-opacity">VITKUND</span>
                         </div>
+                        <h3 class="title">Contact With Us</h3>
+                        <form id="contact-form" onsubmit="SendContactEmail(); return false" class="rainbow-dynamic-form max-width-auto">
+                            <div class="form-group">
+                                <input name="name" id="name" type="text" required>
+                                <label>Name</label>
+                                <span class="focus-border"></span>
+                            </div>
+                            <div class="form-group">
+                                <input id="email" name="email" type="email" required>
+                                <label>Email</label>
+                                <span class="focus-border"></span>
+                            </div>
+                            <div class="form-group">
+                                <input type="tel" id="phone" name="phone" required>
+                                <label>Your Phone</label>
+                                <span class="focus-border"></span>
+                            </div>
+                            <div class="form-group">
+                                <textarea name="contact-message" id="message"></textarea>
+                                <label>Message</label>
+                                <span class="focus-border"></span>
+                            </div>
+                            <div class="form-submit-group">
+                                <button name="submit" type="submit" id="btnSubmit" class="rbt-btn btn-md btn-gradient hover-icon-reverse w-100">
+                                    <span class="icon-reverse-wrapper">
+                                        <span class="btn-text">GET IT NOW</span>
+                                        <span class="btn-icon"><i class="feather-arrow-right"></i></span>
+                                        <span class="btn-icon"><i class="feather-arrow-right"></i></span>
+                                    </span>
+                                </button>
+
+                                <span id="spanMsg" style="color:red;display:none;">Thank you for contact us.</span>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
 
-        <div class="rbt-google-map bg-color-white rbt-section-gapTop">
-            <iframe class="w-100" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d223571.19188029983!2d76.45152424814998!3d28.889435783029803!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d85a5414251a5%3A0x9f011cc2777a4544!2sRohtak%2C%20Haryana!5e0!3m2!1sen!2sin!4v1699274268422!5m2!1sen!2sin" height="600" style="border:0"></iframe>
-        </div>
+    <div class="rbt-google-map bg-color-white rbt-section-gapTop">
+        <iframe class="w-100" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d223571.19188029983!2d76.45152424814998!3d28.889435783029803!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d85a5414251a5%3A0x9f011cc2777a4544!2sRohtak%2C%20Haryana!5e0!3m2!1sen!2sin!4v1699274268422!5m2!1sen!2sin" height="600" style="border:0"></iframe>
+    </div>
+
+    <script>
+
+        //$('#btnSubmit').click(function () {
+        //    SendContactEmail();
+        //});
+        function SendContactEmail() {
+
+            var name = $("#name").val();
+            var email = $("#email").val();
+            var phone = $("#phone").val();
+            var message = $("#message").val();
+
+            var data = { name: name, email: email, phone: phone, message: message };
+            $.ajax({
+                type: 'GET',
+                url: '/Home/SendContactEmail',
+                data: data,
+                traditional: true,
+                contentType: 'application/json; charset=utf-8',
+                datatype: 'json',
+                success: function (result) {
+                    $("#name").val('');
+                    $("#email").val('');
+                    $("#phone").val('');
+                    $("#message").val('');
+
+                    $("#spanMsg").show();
 
 
-    </main>
+                },
+                error: function (result) {
+                }
+            });
+        }
+    </script>
+</main>
 
 
