--- a/Vitkund/Views/Home/Signup.cshtml
+++ b/Vitkund/Views/Home/Signup.cshtml
@@ -32,36 +32,36 @@
 
                         <div class="row g-5">
                             <div class="col-md-6 col-12">
-                                <label>नाम*</label><span id="maxvalspanname" style="color:red"></span><span id="validationMessageforname" style="color:red"></span><span id="requiredvalidationforname" style="color:red"></span>
-                                <input type="text" id="Nametxtbox" placeholder="आपका नाम लिखे ">
+                                <label>Name*</label><span id="maxvalspanname" style="color:red"></span><span id="validationMessageforname" style="color:red"></span><span id="requiredvalidationforname" style="color:red"></span>
+                                <input type="text" id="Nametxtbox" placeholder="Your Name">
                             </div>
 
                             <div class="col-md-6 col-12">
-                                <label>पिता का नाम*</label><span id="maxvalspanfathername" style="color:red"></span><span id="validationMessageforfathername" style="color:red"></span><span id="requiredvalidationforfathername" style="color:red"></span>
-                                <input type="text" id="fathernametxtbox" placeholder="पिता का नाम लिखे">
+                                <label>Your Father Name*</label><span id="maxvalspanfathername" style="color:red"></span><span id="validationMessageforfathername" style="color:red"></span><span id="requiredvalidationforfathername" style="color:red"></span>
+                                <input type="text" id="fathernametxtbox" placeholder="Father Name">
                             </div>
 
                             <div class="col-md-6 col-12">
-                                <label>जिला *</label><span id="maxvalspandistrict" style="color:red"></span><span id="validationMessagefordistrict" style="color:red"></span><span id="requiredvalidationfordistrict" style="color:red"></span>
-                                <input type="text" id="districttxbox" placeholder="आपका जिला लिखे">
+                                <label>City *</label><span id="maxvalspandistrict" style="color:red"></span><span id="validationMessagefordistrict" style="color:red"></span><span id="requiredvalidationfordistrict" style="color:red"></span>
+                                <input type="text" id="districttxbox" placeholder="Your City">
                             </div>
 
                             <div class="col-md-6 col-12">
-                                <label>राज्य *</label><span id="maxvalspanstate" style="color:red"></span><span id="validationMessageforstate" style="color:red"></span><span id="requiredvalidationforstate" style="color:red"></span>
-                                <input type="text" id="statetxtbox" placeholder="आपका राज्य लिखे">
+                                <label>State *</label><span id="maxvalspanstate" style="color:red"></span><span id="validationMessageforstate" style="color:red"></span><span id="requiredvalidationforstate" style="color:red"></span>
+                                <input type="text" id="statetxtbox" placeholder="Your State">
                             </div>
 
                             <div class="col-md-6 col-12">
-                                <label>मोबाइल नंबर *</label><span id="validationMessagemobileno" style="color:red"></span><span id="maxvalmobileno" style="color:red"></span><span id="requiredvalidationformobileno" style="color:red"></span>
-                                <input type="text" id="mobilenotxtbox" placeholder="मोबाइल नंबर दर्ज करे ">
+                                <label>Mobile Number *</label><span id="validationMessagemobileno" style="color:red"></span><span id="maxvalmobileno" style="color:red"></span><span id="requiredvalidationformobileno" style="color:red"></span>
+                                <input type="text" id="mobilenotxtbox" placeholder="Your Mobile No. ">
                             </div>
                             <div class="col-md-6 col-12">
-                                <label>उपयोगकर्ता नाम *</label><span id="maxvalspanusername" style="color:red"></span><span id="validationMessageforusername" style="color:red"></span><span id="requiredvalidationforusername" style="color:red"></span>
-                                <input type="text" id="Usernametxtbox" placeholder="मोबाइल नंबर दर्ज करे ">
+                                <label>User Name *</label><span id="maxvalspanusername" style="color:red"></span><span id="validationMessageforusername" style="color:red"></span><span id="requiredvalidationforusername" style="color:red"></span>
+                                <input type="text" id="Usernametxtbox" placeholder="Enter User Name">
                             </div>
                             <div class="col-md-6 col-12">
-                                <label>पासवर्ड *</label><span id="passwordError" style="color: red;"></span><span id="requiredvalidationforpassword" style="color:red"></span>
-                                <input type="password" id="Passwordtxtbox" placeholder="मोबाइल नंबर दर्ज करे ">
+                                <label>Password *</label><span id="passwordError" style="color: red;"></span><span id="requiredvalidationforpassword" style="color:red"></span>
+                                <input type="password" id="Passwordtxtbox" placeholder="Your Password">
                             </div>
                             <div class="plceholder-button mt--50">
                                 <button onclick="Signup()" type="button" class="rbt-btn btn-gradient hover-icon-reverse">
