--- a/Vitkund/Views/Home/Index.cshtml
+++ b/Vitkund/Views/Home/Index.cshtml
@@ -1,7 +1,4 @@
 ﻿
-
-
-
 <div class="rbt-header-sticky">
 
 
@@ -1217,37 +1214,40 @@
                     <h4 class="modal-title" style="margin: 0 auto;">Contact Us</h4>
                 </div>
                 <div class="modal-body">
-                    <form id="contact-form" method="POST" action="mail.php" class="rainbow-dynamic-form max-width-auto" style="padding:20px;">
+                    <form id="contact-form" onsubmit="SendContactEmail(); return false" class="rainbow-dynamic-form max-width-auto" style="padding:20px;">
                         <div class="form-group">
-                            <input name="contact-name" id="contact-name" type="text">
+                            <input name="name" id="name" type="text" required>
                             <label>Name</label>
                             <span class="focus-border"></span>
                         </div>
                         <div class="form-group">
-                            <input name="contact-phone" type="email">
+                            <input id="email" name="email" type="email" required>
                             <label>Email</label>
                             <span class="focus-border"></span>
                         </div>
                         <div class="form-group">
-                            <input type="text" id="subject" name="subject">
-                            <label>Your Subject</label>
+                            <input type="tel" id="phone" name="phone" required>
+                            <label>Your Phone</label>
                             <span class="focus-border"></span>
                         </div>
                         <div class="form-group">
-                            <textarea name="contact-message" id="contact-message"></textarea>
+                            <textarea name="contact-message" id="message"></textarea>
                             <label>Message</label>
                             <span class="focus-border"></span>
                         </div>
                         <div class="form-submit-group">
-                            <button name="submit" type="submit" id="submit" class="rbt-btn btn-md btn-gradient hover-icon-reverse w-100">
+                            <button name="submit" type="submit" id="btnSubmit" class="rbt-btn btn-md btn-gradient hover-icon-reverse w-100">
                                 <span class="icon-reverse-wrapper">
-                                    <span class="btn-text">Submit</span>
+                                    <span class="btn-text">GET IT NOW</span>
                                     <span class="btn-icon"><i class="feather-arrow-right"></i></span>
                                     <span class="btn-icon"><i class="feather-arrow-right"></i></span>
                                 </span>
                             </button>
+
+                            <span id="spanMsg" style="color:red;display:none;">Thank you for contact us.</span>
                         </div>
                     </form>
+                
                 </div>
 
             </div>
@@ -1267,3 +1267,38 @@
 
 </div>
 
+<script>
+
+    //$('#btnSubmit').click(function () {
+    //    SendContactEmail();
+    //});
+    function SendContactEmail() {
+
+        var name = $("#name").val();
+        var email = $("#email").val();
+        var phone = $("#phone").val();
+        var message = $("#message").val();
+
+        var data = { name: name, email: email, phone: phone, message: message };
+        $.ajax({
+            type: 'GET',
+            url: '/Home/SendContactEmail',
+            data: data,
+            traditional: true,
+            contentType: 'application/json; charset=utf-8',
+            datatype: 'json',
+            success: function (result) {
+                $("#name").val('');
+                $("#email").val('');
+                $("#phone").val('');
+                $("#message").val('');
+
+                $("#spanMsg").show();
+
+
+            },
+            error: function (result) {
+            }
+        });
+    }
+</script>
