--- a/Vitkund/Views/Home/TrendingBusiness.cshtml
+++ b/Vitkund/Views/Home/TrendingBusiness.cshtml
@@ -51,22 +51,20 @@
                                     <li class="course-switch-item"><button class="rbt-list-view" title="List Layout"><i class="feather-list"></i> <span class="text">List</span></button></li>
                                 </ul>
                             </div>
-                            <div class="rbt-short-item">
-                                <span class="course-index">Showing 1-4 of 4 results</span>
-                            </div>
+                          
                         </div>
                     </div>
 
                     <div class="col-lg-7 col-md-12">
                         <div class="rbt-sorting-list d-flex flex-wrap align-items-center justify-content-start justify-content-lg-end">
-                            <div class="rbt-short-item">
+                            @*<div class="rbt-short-item">
                                 <form action="#" class="rbt-search-style me-0">
                                     <input type="text" placeholder="Search Your Course..">
                                     <button type="submit" class="rbt-search-btn rbt-round-btn">
                                         <i class="feather-search"></i>
                                     </button>
                                 </form>
-                            </div>
+                            </div>*@
 
                             <div class="rbt-short-item">
                                 <div class="view-more-btn text-start text-sm-end">
@@ -142,7 +140,7 @@
                                 <div class="rbt-card-body">
 
                                     <h6 class="rbt-card-title primary-color">
-                                        <a href="#">@item.BusinessName</a>
+                                       @item.BusinessName
                                     </h6>
                                     @if (item.FromPrice != null && item.ToPrice != null)
                                     {
@@ -159,7 +157,7 @@
                                         @if (item.VideoLink != null && item.VideoLink != "")
                                         {
                                             <a class="rbt-btn-link" href="@item.VideoLink">
-                                                Learn More<i class="feather-arrow-right"></i>
+                                                Watch Now <i class="feather-arrow-right"></i>
                                             </a>
                                         }
                                     </div>
@@ -220,7 +218,7 @@
                                 var VideoLink = response.data[i].VideoLink;
 
                                 html += '<div class="course-grid-3"> <div class="rbt-card variation-01 rbt-hover"> <div class="rbt-card-img"> <a href="#">';
-                                html += '<div class="rbt-badge-3 bg-white"> <span>-40%</span> <span>Off</span> </div> </a> </div > <div class="rbt-card-body"> <div class="rbt-card-top"> <div class="rbt-review"> <div class="rating"> <i class="fas fa-star"></i> <i class="fas fa-star"></i> <i class="fas fa-star"></i> <i class="fas fa-star"></i> <i class="fas fa-star"></i> </div> <span class="rating-count"> (15 Reviews)</span> </div> <div class="rbt-bookmark-btn"> <a class="rbt-round-btn" title="Bookmark" href="#"> <i class="feather-bookmark"></i> </a> </div> </div> <h4 class="rbt-card-title"> <a href="#">' + Businessname + '</a> </h4><h6>Price Range :- ' + Fromprice + ' - ' + Toprice + '</h6><div class="rbt-card-bottom">';
+                                html += ' </a> </div > <div class="rbt-card-body"> <div class="rbt-card-top">  <div class="rbt-bookmark-btn"> <a class="rbt-round-btn" title="Bookmark" href="#"> <i class="feather-bookmark"></i> </a> </div> </div> <h4 class="rbt-card-title"> <a href="#">' + Businessname + '</a> </h4><h6>Price Range :- ' + Fromprice + ' - ' + Toprice + '</h6><div class="rbt-card-bottom">';
                                 if (VideoLink != null && VideoLink != '') {
                                     html += '<a class="rbt-btn-link" href="' + VideoLink + '"> Learn More<i class="feather-arrow-right"></i> </a>';
                                 }
@@ -266,7 +264,7 @@
                             var VideoLink = response.data[i].VideoLink;
 
                             html += '<div class="course-grid-3"> <div class="rbt-card variation-01 rbt-hover"> <div class="rbt-card-img"> <a href="#">';
-                            html += '<div class="rbt-badge-3 bg-white"> <span>-40%</span> <span>Off</span> </div> </a> </div > <div class="rbt-card-body"> <div class="rbt-card-top"> <div class="rbt-review"> <div class="rating"> <i class="fas fa-star"></i> <i class="fas fa-star"></i> <i class="fas fa-star"></i> <i class="fas fa-star"></i> <i class="fas fa-star"></i> </div> <span class="rating-count"> (15 Reviews)</span> </div> <div class="rbt-bookmark-btn"> <a class="rbt-round-btn" title="Bookmark" href="#"> <i class="feather-bookmark"></i> </a> </div> </div> <h4 class="rbt-card-title"> <a href="#">' + Businessname + '</a> </h4><h6>Price Range :- ' + Fromprice + ' - ' + Toprice + '</h6><div class="rbt-card-bottom">';
+                            html += '<div class="rbt-badge-3 bg-white"> <span>-40%</span> <span>Off</span> </div> </a> </div > <div class="rbt-card-body"> <div class="rbt-card-top">  </div> <h4 class="rbt-card-title"> <a href="#">' + Businessname + '</a> </h4><h6>Price Range :- ' + Fromprice + ' - ' + Toprice + '</h6><div class="rbt-card-bottom">';
                             if (VideoLink != null && VideoLink != '') {
                                 html += '<a class="rbt-btn-link" href="' + VideoLink + '"> Learn More<i class="feather-arrow-right"></i> </a>';
                             }
