--- a/Vitkund/Views/Home/Vitkundgaon.cshtml
+++ b/Vitkund/Views/Home/Vitkundgaon.cshtml
@@ -33,12 +33,12 @@
                         <div class="row g-5">
                             <div class="col-md-6 col-12">
                                 <label>Age*</label>
-                                <input type="text" placeholder="Your Age">
+                                <input type="text" placeholder="Your Age" id="age">
                             </div>
                             <div class="col-md-6 col-12">
                                 <label>Type of Firm*</label>
                                 <div class="rbt-modern-select bg-transparent height-45">
-                                    <select class="w-100">
+                                    <select class="w-100" id="firm">
                                         <option> -- Select --</option>
                                         <option>Sole Proprietorship</option>
                                         <option>Partnerships</option>
@@ -53,7 +53,7 @@
                             <div class="col-md-6 col-12">
                                 <label>Education*</label>
                                 <div class="rbt-modern-select bg-transparent height-45">
-                                    <select class="w-100">
+                                    <select class="w-100" id="education">
                                         <option> -- Select --</option>
                                         <option>10th</option>
                                         <option>12th</option>
@@ -67,7 +67,7 @@
                             <div class="col-md-6 col-12">
                                 <label>Profit Percentage*</label>
                                 <div class="rbt-modern-select bg-transparent height-45">
-                                    <select class="w-100">
+                                    <select class="w-100" id="profit">
                                         <option> -- Select --</option>
                                         <option><= 5%</option>
                                         <option>6 to 10%</option>
@@ -81,7 +81,7 @@
                             <div class="col-md-6 col-12">
                                 <label>Experience*</label>
                                 <div class="rbt-modern-select bg-transparent height-45">
-                                    <select class="w-100">
+                                    <select class="w-100" id="exp">
                                         <option> -- Select --</option>
                                         <option><=1 Year</option>
                                         <option>1 to 3 Year</option>
@@ -95,7 +95,7 @@
                             <div class="col-md-6 col-12">
                                 <label>Premises*</label>
                                 <div class="rbt-modern-select bg-transparent height-45">
-                                    <select class="w-100">
+                                    <select class="w-100" id="premises">
                                         <option> -- Select --</option>
                                         <option>On Rent</option>
                                         <option>On Lease</option>
@@ -108,7 +108,7 @@
                             <div class="col-md-6 col-12">
                                 <label>Capital </label>
                                 <div class="rbt-modern-select bg-transparent height-45">
-                                    <select class="w-100">
+                                    <select class="w-100" id="capital">
                                         <option> -- Select --</option>
                                         <option> <= 10%</option>
                                         <option>11 to 25%</option>
@@ -121,26 +121,26 @@
                             <div class="col-md-6 col-12">
                                 <label>Raw Material & Labour Etc. Availability</label>
                                 <div class="rbt-modern-select bg-transparent height-45">
-                                    <select class="w-100">
+                                    <select class="w-100" id="material">
                                         <option> -- Select --</option>
-                                        <option> >251 KM</option>
+                                        <option> >251KM</option>
                                         <option>151 to 250KM</option>
                                         <option>101 to 150KM</option>
                                         <option>51 to 100KM</option>
-                                        <option> Less then 50KM</option>
+                                        <option>Less then 50KM</option>
                                     </select>
                                 </div>
                             </div>
                             <div class="col-md-6 col-12">
                                 <label>Research & Development </label>
                                 <div class="rbt-modern-select bg-transparent height-45">
-                                    <select class="w-100">
+                                    <select class="w-100" id="research">
                                         <option> -- Select --</option>
                                         <option><=1 Year</option>
                                         <option>1 to 3 Year</option>
                                         <option>3 to 5 Year</option>
-                                        <option> > 5 Year</option>
-                                        <option> > 7 Year/Related</option>
+                                        <option> >5 to 7 Year</option>
+                                        <option> >7 Year/Related</option>
                                     </select>
                                 </div>
                             </div>
@@ -149,13 +149,13 @@
                             <div class="col-md-6 col-12">
                                 <label>Marketing & Product Selling</label>
                                 <div class="rbt-modern-select bg-transparent height-45">
-                                    <select class="w-100">
+                                    <select class="w-100" id="market">
                                         <option> -- Select --</option>
-                                        <option> Untrained Worker</option>
+                                        <option>Untrained Worker</option>
                                         <option>Through Social Media</option>
                                         <option>Through Trained & Skilled Workers</option>
-                                        <option> Responsibility of partner or Manager</option>
-                                        <option> Own Responsibility</option>
+                                        <option>Responsibility of partner or Manager</option>
+                                        <option>Own Responsibility</option>
                                     </select>
                                 </div>
                             </div>
@@ -163,13 +163,13 @@
                             <div class="col-md-6 col-12">
                                 <label>Cibil Score</label>
                                 <div class="rbt-modern-select bg-transparent height-45">
-                                    <select class="w-100">
+                                    <select class="w-100" id="cibil">
                                         <option> -- Select --</option>
-                                        <option> >= 800 </option>
+                                        <option> >= 800</option>
                                         <option> > 775 to 799</option>
                                         <option> > 750 to 774</option>
                                         <option> > 715 to 749</option>
-                                        <option> < 714 </option>
+                                        <option> < 714</option>
                                     </select>
                                 </div>
                             </div>
@@ -177,19 +177,19 @@
                             <div class="col-md-6 col-12">
                                 <label>Business Expertise</label>
                                 <div class="rbt-modern-select bg-transparent height-45">
-                                    <select class="w-100">
+                                    <select class="w-100" id="experts">
                                         <option> -- Select --</option>
-                                        <option> Self Skilled </option>
-                                        <option> Partner or Manager Specialist</option>
-                                        <option> Worker & Labour Specialist</option>
-                                        <option> Semi-trained Staff & Owners</option>
-                                        <option> Untrained Staff & Owners </option>
+                                        <option>Self Skilled</option>
+                                        <option>Partner or Manager Specialist</option>
+                                        <option>Worker & Labour Specialist</option>
+                                        <option>Semi-trained Staff & Owners</option>
+                                        <option>Untrained Staff & Owners</option>
                                     </select>
                                 </div>
                             </div>
 
                             <div class="plceholder-button mt--50">
-                                <button class="rbt-btn btn-gradient hover-icon-reverse">
+                                <button class="rbt-btn btn-gradient hover-icon-reverse vit_page1">
                                     <a href="multiple-choice" style="color:#fff;">
                                         <span class="icon-reverse-wrapper">
                                             <span class="btn-text">Next</span>
@@ -202,9 +202,6 @@
                         </div>
 
                     </div>
-
-
-
                 </div>
             </div>
 
@@ -218,4 +215,275 @@
         <hr class="rbt-separator m-0">
     </div>
 </div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+<script type="text/javascript">
+    $(document).ready(function () {
+        var totalvalue = 0;
+        $('.vit_page1').click(function () {
+            page1()
+        });
 
+    });
+    function page1() {
+        //debugger
+        // all textboxes values
+        var totalage = 0;
+        var totaledu = 0;
+        var totalprofit = 0;
+        var totalexp = 0;
+        var totalcapital = 0;
+        var totalmaterial = 0;
+        var totalresearch = 0;
+        var totalmarketing = 0;
+        var totalscore = 0;
+        var totalexpert = 0;
+        // All dropdown values
+        var totalfirm = 0;
+        var totalpremise = 0;
+        //getting the age textbox value
+        var age = $('#age').val();
+        if (age >= 18 & age <= 25) {
+            totalage = 3;
+        }
+        else if (age >= 26 & age <= 35) {
+            totalage = 5;
+        }
+        else if (age >= 36 & age <= 45) {
+            totalage = 4;
+        }
+        else if (age >= 46 & age <= 55) {
+            totalage = 2;
+        }
+        else if (age >= 56) {
+            totalage = 1;
+        }
+        else {
+            totalage = 0;
+        }
+        // getting the education drodown value
+        var edu = $('#education :selected').text();
+        if (edu =="10th") {
+            totaledu = 1;
+        }
+        else if (edu == "12th") {
+            totaledu = 2;
+        }
+        else if (edu  == 'Graduate') {
+            totaledu = 3;
+        }
+        else if (edu == 'Post Graduate') {
+            totaledu = 4;
+        }
+        else if (edu == 'Bussiness Related Education') {
+            totaledu = 5;
+        }
+        else {
+            totaledu = 0;
+        }
+        // getting profit dropdown value
+        var percen = $('#profit :selected').text();
+        if (percen == "<= 5%") {
+            totalprofit = 1;
+        }
+        else if (percen == "6 to 10%") {
+            totalprofit = 2;
+        }
+        else if (percen == "11 to 20%") {
+            totalprofit = 3;
+        }
+        else if (percen == "21 to 35%") {
+            totalprofit = 4;
+        }
+        else if (percen == " > 35%") {
+            totalprofit = 5;
+        }
+        else  {
+            totalprofit = 0;
+        }
+        // getting experience value
+        var exper = $('#exp :selected').text();
+        if (exper =="<=1 Year") {
+            totalexp = 1;
+        }
+        else if (exper =="1 to 3 Year") {
+            totalexp = 2;
+        }
+        else if (exper =="3 to 5 Year") {
+            totalexp = 3;
+        }
+        else if (exper ==" > 5 Year") {
+            totalexp = 4;
+        }
+        else if (exper ==" > 7 Year/Related") {
+            totalexp = 5;
+        }
+        else  {
+            totalexp = 0;
+        }
+        // getting capital value
+        var capi = $('#capital :selected').text();
+        if (capi ==" <= 10%") {
+            totalcapital = 1;
+        }
+        else if (capi =="11 to 25%") {
+            totalcapital = 2;
+        }
+        else if (capi =="26 to 40%") {
+            totalcapital = 3;
+        }
+        else if (capi =="41 to 60%") {
+            totalcapital = 4;
+        }
+        else if (capi ==" >60%") {
+            totalcapital = 5;
+        }
+        else  {
+            totalcapital = 0;
+        }
+        // getting raw material value
+        var mat = $('#material :selected').text();
+        if (mat ==" >251KM") {
+            totalmaterial = 1;
+        }
+        else if (mat =="151 to 250KM") {
+            totalmaterial = 2;
+        }
+        else if (mat =="101 to 150KM") {
+            totalmaterial = 3;
+        }
+        else if (mat =="51 to 100KM") {
+            totalmaterial = 4;
+        }
+        else if (mat =="Less then 50KM") {
+            totalmaterial = 5;
+        }
+        else  {
+            totalmaterial = 0;
+        }
+        // getting research development value
+        var develop = $('#research :selected').text();
+        if (develop =="<=1 Year") {
+            totalresearch = 1;
+        }
+        else if (develop =="1 to 3 Year") {
+            totalresearch = 2;
+        }
+        else if (develop =="3 to 5 Year") {
+            totalresearch = 3;
+        }
+        else if (develop ==" >5 to 7 Year") {
+            totalresearch = 4;
+        }
+        else if (develop ==" >7 Year/Related") {
+            totalresearch = 5;
+        }
+        else  {
+            totalresearch = 0;
+        }
+        // getting market value
+        var mar = $('#market :selected').text();
+        if (mar == 'Untrained Worker') {
+            totalmarketing = 1;
+        }
+        else if (mar == "Through Social Media") {
+            totalmarketing = 2;
+        }
+        else if (mar == "Through Trained & Skilled Workers") {
+            totalmarketing = 3;
+        }
+        else if (mar == "Responsibility of partner or Manager") {
+            totalmarketing = 4;
+        }
+        else if (mar == "Own Responsibility") {
+            totalmarketing = 5;
+        }
+        else  {
+            totalmarketing = 0;
+        }
+        // getting cibil score
+        var cib = $('#cibil :selected').text();
+        if (cib== " >= 800") {
+            totalscore = 5;
+        }
+        else if (cib ==" > 775 to 799") {
+            totalscore = 4;
+        }
+        else if (cib ==" > 750 to 774") {
+            totalscore = 3;
+        }
+        else if (cib ==" > 715 to 749") {
+            totalscore = 2;
+        }
+        else if (cib ==" < 714") {
+            totalscore = 1;
+        }
+        else  {
+            totalscore = 0;
+        }
+        // getting expert value
+        var business = $('#experts :selected').text();
+        if (business == "Untrained Staff & Owner") {
+            totalexpert = 1;
+        }
+        else if (business == "Semi-trained Staff & Owners") {
+            totalexpert = 2;
+        }
+        else if (business == "Worker & Labour Specialist") {
+            totalexpert = 3;
+        }
+        else if (business == "Partner or Manager Specialist") {
+            totalexpert = 4;
+        }
+        else if (business == "Self Skilled") {
+            totalexpert = 5;
+        }
+        else  {
+            totalexpert = 0;
+        }
+
+        // getting firm dropdown value
+        var tofirm = $('#firm :selected').text();
+        if (tofirm == "Unregistered") {
+            totalfirm = 1;
+        }
+        else if (tofirm == "One Person Company") {
+            totalfirm = 2;
+        }
+        else if (tofirm == "Company"){
+            totalfirm = 3;
+        }
+        else if (tofirm == "Partnerships") {
+            totalfirm = 5;
+        }
+        else if (tofirm == "Sole Proprietorship") {
+            totalfirm = 4;
+        }
+        else {
+            totalfirm = 0;
+        }
+        // getting premises value
+        var premis = $('#premises :selected').text();
+        if (premis == "On Rent") {
+            totalpremise = 1;
+        }
+        else if (premis == "On Lease") {
+            totalpremise = 2;
+        }
+        else if (premis == "Trust/Society Property") {
+            totalpremise = 3;
+        }
+        else if (premis == "Property") {
+            totalpremise = 4;
+        }
+        else if (premis == "Own Property") {
+            totalpremise = 5;
+        }
+        else  {
+            totalpremise = 0;
+        }
+
+        totalvalue = totalage + totaledu + totalprofit + totalexp + totalcapital + totalmaterial + totalresearch + totalmarketing + totalscore + totalexpert + totalfirm + totalpremise;
+        // store total in local storage
+        localStorage.setItem("Page1Sum", totalvalue);
+    }
+</script>
